--- a/wikibot/pom.xml
+++ b/wikibot/pom.xml
@@ -7,12 +7,43 @@
     <groupId>com3001.at00672</groupId>
     <artifactId>wikibot</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <repositories>
+        <repository>
+            <id>soluvas-public-snapshots</id>
+            <url>http://nexus.bippo.co.id/nexus/content/repositories/soluvas-public-snapshots/</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.jena</groupId>
             <artifactId>apache-jena-libs</artifactId>
             <type>pom</type>
             <version>3.14.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.alicebot.ab</groupId>
+            <artifactId>ab</artifactId>
+            <version>4.0.4-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.5</version>
         </dependency>
     </dependencies>
     <build>
