--- a/wikibot/pom.xml
+++ b/wikibot/pom.xml
@@ -28,6 +28,12 @@
             <type>pom</type>
             <version>3.14.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.11</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.alicebot.ab</groupId>
