--- a/wikibot/pom.xml
+++ b/wikibot/pom.xml
@@ -34,6 +34,13 @@
             <version>4.5.11</version>
         </dependency>
 
+        <!-- Word utilities -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.8</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.alicebot.ab</groupId>
