--- a/wikibot/src/main/resources/application.properties
+++ b/wikibot/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.thymeleaf.cache=false
-spring.devtools.restart.enabled= true
+spring.devtools.livereload.enabled=true
 spring.application.name=Wikibot
