--- a/wikibot/src/main/resources/application.properties
+++ b/wikibot/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.thymeleaf.cache=false
 spring.devtools.livereload.enabled=true
+spring.devtools.restart.additional-paths=.
 spring.application.name=Wikibot
