--- a/wikibot/pom.xml
+++ b/wikibot/pom.xml
@@ -119,6 +119,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.rdf4j</groupId>
+            <artifactId>rdf4j-sparqlbuilder</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
+
 
     </dependencies>
     <build>
