--- a/wikibot/pom.xml
+++ b/wikibot/pom.xml
@@ -124,7 +124,11 @@
             <artifactId>rdf4j-sparqlbuilder</artifactId>
             <version>3.1.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>5.1.0</version>
+        </dependency>
 
 
     </dependencies>
