--- a/wikibot/src/main/resources/application.properties
+++ b/wikibot/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.thymeleaf.cache=false
-spring.devtools.livereload.enabled=true
-spring.devtools.restart.additional-paths=.
+spring.devtools.restart.exclude=logs/**
 spring.application.name=Wikibot
+spring.datasource.url=jdbc:h2:file:./db/chat;DB_CLOSE_DELAY=-1
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.show_sql=true
