--- a/wikibot/src/main/resources/application.properties
+++ b/wikibot/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.thymeleaf.cache=false
 spring.devtools.restart.exclude=logs/**
 spring.application.name=Wikibot
-spring.datasource.url=jdbc:h2:file:./db/chat;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.show_sql=true
