--- a/wikibot/pom.xml
+++ b/wikibot/pom.xml
@@ -12,6 +12,8 @@
     <groupId>com3001.at00672</groupId>
     <artifactId>wikibot</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
+
 
     <properties>
         <java.version>11</java.version>
