--- a/wikibot/pom.xml
+++ b/wikibot/pom.xml
@@ -132,6 +132,11 @@
             <version>5.1.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.atteo</groupId>
+            <artifactId>evo-inflector</artifactId>
+            <version>1.2.2</version>
+        </dependency>
 
     </dependencies>
     <build>
