--- a/wikibot/pom.xml
+++ b/wikibot/pom.xml
@@ -52,6 +52,12 @@
             <version>1.8</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-httpclient</groupId>
+            <artifactId>commons-httpclient</artifactId>
+            <version>3.1</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.alicebot.ab</groupId>
